<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:id="@+id/uidSearch"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/uid_searchSame"
            android:gravity="center" />

        <Button
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/uidList"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/uid_list"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/explain_sameUid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/explain_sameUid"
            android:singleLine="false"
            android:visibility="gone"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/explain_allUid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/explain_allUid"
            android:singleLine="false"
            android:visibility="gone"
            android:gravity="center" />
    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appList"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>