<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:text="@string/ip"/>

            <EditText
                android:id="@+id/IP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:ems="4"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/TcpFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tcp"/>

        <CheckBox
            android:id="@+id/UdpFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udp"/>

        <Button
            android:id="@+id/bt_startSocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/bt_start"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/tcpLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:text="@string/label_TcpThreadNum"/>

            <EditText
                android:id="@+id/TcpThredNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:ems="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:text="@string/packSize"/>

            <EditText
                android:id="@+id/tcp_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:ems="4"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/udpLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:text="@string/label_UdpThreadNum"/>

            <EditText
                android:id="@+id/UdpThreadNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:ems="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:text="@string/packSize"/>

            <EditText
                android:id="@+id/udp_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:ems="4"/>
            </LinearLayout>
    </LinearLayout>

    <!--滚动条-->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!-- 显示内容 -->
        <TextView
            android:id="@+id/socket_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:singleLine="false"
            android:layout_margin="12dp"/>
    </ScrollView>

</LinearLayout>