<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="14sp"
            android:text="@string/label_url"/>

        <EditText
            android:id="@+id/et_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:ems="4"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="14sp"
            android:text="@string/label_thread_num"/>

        <EditText
            android:id="@+id/et_thread_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:ems="4"/>

        <Button
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/bt_start"/>
    </LinearLayout>

    <!--滚动条-->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!-- 显示内容 -->
        <TextView
            android:id="@+id/tx_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:singleLine="false"
            android:layout_margin="12dp"/>
    </ScrollView>

</LinearLayout>